Add piecharts to facets

--- a/src/client/translations/ulan/localeEN.json
+++ b/src/client/translations/ulan/localeEN.json
@@ -5,14 +5,14 @@
     "description": "The Sampo-UI framework makes it possible to create highly customizable, user-friendly, and responsive user interfaces using current state-of-the-art JavaScript libraries and data from SPARQL endpoints."
   },
   "appTitle": {
-    "short": "ULANSampo",
+    "short": "ULAN RELATIONS",
     "mobile": "S-UI",
     "long": "&nbsp; &nbsp; ULAN Relations &nbsp; &nbsp;",
-    "subheading": "Searching for relations in Getty ULAN Knowledge Graph"
+    "subheading": "Searching for relations in the Getty ULAN Knowledge Graph"
   },
   "appDescription1": "Sampo is a web service for searching and studying place names. The search results can be viewed as a table, on maps, and as statistical distributions. Historical and current background maps are provided.",
   "appDescription2": "Start by choosing source dataset(s) and input a place name on the search field. Alternatively you can search by area.",
-  "selectPerspective": "Search realtions in ihe Union List of Artist Names (ULAN) data:",
+  "selectPerspective": "Search realtions in the Union List of Artist Names (ULAN) data:",
   "mainPageImageLicence": "Images used under license from Shutterstock.com",
   "backendErrorText": "One of the backend services is not available at the moment. Please try again later.",
   "infoHeader": {
