--- a/src/client/translations/ulan/localeEN.json
+++ b/src/client/translations/ulan/localeEN.json
@@ -351,7 +351,7 @@
           "description": "The expression(s) of the Work."
         },
         "personABirthYear": {
-          "label": "Person A nationality",
+          "label": "Person A birth year",
           "description": "The expression(s) of the Work."
         },
         "relationType": {
