--- a/src/client/translations/ulan/localeEN.json
+++ b/src/client/translations/ulan/localeEN.json
@@ -8,7 +8,7 @@
     "short": "ULAN RELATIONS",
     "mobile": "S-UI",
     "long": "&nbsp; &nbsp; ULAN Relations &nbsp; &nbsp;",
-    "subheading": "Searching for relations in the Getty ULAN Knowledge Graph"
+    "subheading": "Searching for relations in the Getty ULAN Knowledge Graph. Under construction, and may include errors."
   },
   "appDescription1": "Sampo is a web service for searching and studying place names. The search results can be viewed as a table, on maps, and as statistical distributions. Historical and current background maps are provided.",
   "appDescription2": "Start by choosing source dataset(s) and input a place name on the search field. Alternatively you can search by area.",
@@ -333,6 +333,63 @@
         "personANationality": {
           "label": "Person A nationality",
           "description": "The expression(s) of the Work."
+        },
+        "personBName": {
+          "label": "Person B",
+          "description": ""
+        },
+        "personBGender": {
+          "label": "Person B gender",
+          "description": ""
+        },
+        "personBNationality": {
+          "label": "Person B nationality",
+          "description": "The expression(s) of the Work."
+        },
+        "personBBirthYear": {
+          "label": "Person B birth year",
+          "description": "The expression(s) of the Work."
+        },
+        "personABirthYear": {
+          "label": "Person A birth year",
+          "description": "The expression(s) of the Work."
+        },
+        "relationType": {
+          "label": "Relation type",
+          "description": "Relation type"
+        }
+      }
+    },
+    "persons": {
+      "label": "Persons",
+      "facetResultsType": "persons",
+      "shortDescription": "Persons in ULAN KG",
+      "longDescription": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> Use this perspective to access data related to Works. The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. If two or more source datasets include the same Work and this has been verified, the information from the source datasets has been merged into one Work. See <a href=\"/instructions\">instructions</a> for using the filters. The result view can be selected using the tabs: </p> <ul class=\"MuiTypography-root MuiTypography-body1\"> <li> <strong>TABLE</STRONG> view gives you a list of specific works, and the manuscripts and manuscript collections in which they can be found. </li> <li> <strong>EXPORT</strong> the SPARQL query used to generate the result table view into YASGUI query editor. </li> </ul>",
+      "instancePage": {
+        "label": "Work",
+        "description": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. This definition is not shared by the Bibale or Oxford Libraries’ conception of the term, which both define their internal “work” concept more closely to the FRBRoo conception of an Expression. The SDBM does not have a work concept at all, recording only the titles of the texts as given in its various sources, without normalizing that data or linking it directly to author information. Works were generated within the MMM dataset by manually creating links across the three datasets’ various conceptions of the relationship between authors and their creations. This process was not able to reconcile every work contained within the combined dataset. </p>"
+      },
+      "properties": {
+        "uri": {
+          "label": "URI",
+          "description": "Uniform Resource Identifier"
+        },
+        "prefLabel": {
+          "label": "Name",
+          "description": "",
+          "textFacetInputPlaceholder": "Search..."
+        },
+        "gender": {
+          "label": "Gender",
+          "description": ""
+        },
+        "nationality": {
+          "label": "Nationality",
+          "description": ""
+        },
+        "teacherOf": {
+          "label": "Teacher of",
+          "description": "Students f the person"
         },
         "personBName": {
           "label": "Person B",
