--- a/src/client/translations/ulan/localeEN.json
+++ b/src/client/translations/ulan/localeEN.json
@@ -14,7 +14,7 @@
   "appDescription2": "Start by choosing source dataset(s) and input a place name on the search field. Alternatively you can search by area.",
   "selectPerspective": "Search realtions in the Union List of Artist Names (ULAN) data:",
   "mainPageImageLicence": "Images used under license from Shutterstock.com",
-  "backendErrorText": "One of the backend services is not available at the moment. Please try again later.",
+  "backendErrorText": "There was an error in fetching data from the back end. This is likely caused by a time out in the SPARQL endpoint. Reloading the page can sometimes help. You can also try to limit the search from other facets first.",
   "infoHeader": {
     "toggleInstructions": "Click to show or hide instructions"
   },
@@ -306,7 +306,7 @@
     "directed": {
       "label": "Relations",
       "facetResultsType": "relations",
-      "shortDescription": "Directed relations",
+      "shortDescription": "Search directed relations. Relations are expressed with a startpoint and endpoint.",
       "longDescription": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> Use this perspective to access data related to Works. The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. If two or more source datasets include the same Work and this has been verified, the information from the source datasets has been merged into one Work. See <a href=\"/instructions\">instructions</a> for using the filters. The result view can be selected using the tabs: </p> <ul class=\"MuiTypography-root MuiTypography-body1\"> <li> <strong>TABLE</STRONG> view gives you a list of specific works, and the manuscripts and manuscript collections in which they can be found. </li> <li> <strong>EXPORT</strong> the SPARQL query used to generate the result table view into YASGUI query editor. </li> </ul>",
       "instancePage": {
         "label": "Work",
@@ -318,7 +318,7 @@
           "description": "Uniform Resource Identifier"
         },
         "prefLabel": {
-          "label": "Title",
+          "label": "Description",
           "description": "",
           "textFacetInputPlaceholder": "Search..."
         },
@@ -353,6 +353,100 @@
         "personABirthYear": {
           "label": "Person A birth year",
           "description": "The expression(s) of the Work."
+        },
+        "relationType": {
+          "label": "Relation type",
+          "description": "Relation type"
+        }
+      }
+    },
+    "undirected": {
+      "label": "Undirected relations",
+      "facetResultsType": "relations",
+      "shortDescription": "Search undirected relations. The relations are exressed in an undirected way so that there is no separate endpoint and starpoint in the connections. ",
+      "longDescription": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> Use this perspective to access data related to Works. The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. If two or more source datasets include the same Work and this has been verified, the information from the source datasets has been merged into one Work. See <a href=\"/instructions\">instructions</a> for using the filters. The result view can be selected using the tabs: </p> <ul class=\"MuiTypography-root MuiTypography-body1\"> <li> <strong>TABLE</STRONG> view gives you a list of specific works, and the manuscripts and manuscript collections in which they can be found. </li> <li> <strong>EXPORT</strong> the SPARQL query used to generate the result table view into YASGUI query editor. </li> </ul>",
+      "instancePage": {
+        "label": "Work",
+        "description": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. This definition is not shared by the Bibale or Oxford Libraries’ conception of the term, which both define their internal “work” concept more closely to the FRBRoo conception of an Expression. The SDBM does not have a work concept at all, recording only the titles of the texts as given in its various sources, without normalizing that data or linking it directly to author information. Works were generated within the MMM dataset by manually creating links across the three datasets’ various conceptions of the relationship between authors and their creations. This process was not able to reconcile every work contained within the combined dataset. </p>"
+      },
+      "properties": {
+        "uri": {
+          "label": "URI",
+          "description": "Uniform Resource Identifier"
+        },
+        "prefLabel": {
+          "label": "Description",
+          "description": "",
+          "textFacetInputPlaceholder": "Search..."
+        },
+        "personName": {
+          "label": "Connected person",
+          "description": ""
+        },
+        "connectedPerson": {
+          "label": "Connected persons",
+          "description": ""
+        },
+        "personGender": {
+          "label": "Person gender",
+          "description": ""
+        },
+        "personNationality": {
+          "label": "Person nationality",
+          "description": ""
+        },
+        "personBirthYear": {
+          "label": "Person birth year",
+          "description": ""
+        },
+        "relationType": {
+          "label": "Relation type",
+          "description": "Relation type"
+        }
+      }
+    },
+    "consolidated": {
+      "label": "Consolidated relations",
+      "facetResultsType": "relations",
+      "shortDescription": "Search consolidated relations. The relations of a second degree are consolidated as one relation.",
+      "longDescription": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> Use this perspective to access data related to Works. The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. If two or more source datasets include the same Work and this has been verified, the information from the source datasets has been merged into one Work. See <a href=\"/instructions\">instructions</a> for using the filters. The result view can be selected using the tabs: </p> <ul class=\"MuiTypography-root MuiTypography-body1\"> <li> <strong>TABLE</STRONG> view gives you a list of specific works, and the manuscripts and manuscript collections in which they can be found. </li> <li> <strong>EXPORT</strong> the SPARQL query used to generate the result table view into YASGUI query editor. </li> </ul>",
+      "instancePage": {
+        "label": "Work",
+        "description": "<p class=\"MuiTypography-root MuiTypography-body1 MuiTypography-paragraph\"> The MMM data model follows the <a href='https://www.ifla.org/publications/node/11240' target='_blank' rel='noopener noreferrer'>FRBRoo</a> definition of a work, which refers to “distinct concepts or combinations of concepts identified in artistic and intellectual expressions.” Works contain title and author information. This definition is not shared by the Bibale or Oxford Libraries’ conception of the term, which both define their internal “work” concept more closely to the FRBRoo conception of an Expression. The SDBM does not have a work concept at all, recording only the titles of the texts as given in its various sources, without normalizing that data or linking it directly to author information. Works were generated within the MMM dataset by manually creating links across the three datasets’ various conceptions of the relationship between authors and their creations. This process was not able to reconcile every work contained within the combined dataset. </p>"
+      },
+      "properties": {
+        "uri": {
+          "label": "URI",
+          "description": "Uniform Resource Identifier"
+        },
+        "prefLabel": {
+          "label": "Description",
+          "description": "",
+          "textFacetInputPlaceholder": "Search..."
+        },
+        "personName": {
+          "label": "Connected person",
+          "description": ""
+        },
+        "connectedPerson": {
+          "label": "Connected persons",
+          "description": ""
+        },
+        "connectingPerson": {
+          "label": "Connector",
+          "description": ""
+        },
+        "personGender": {
+          "label": "Person gender",
+          "description": ""
+        },
+        "personNationality": {
+          "label": "Person nationality",
+          "description": ""
+        },
+        "personBirthYear": {
+          "label": "Person birth year",
+          "description": ""
         },
         "relationType": {
           "label": "Relation type",
